# codebake

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/actions/: update-wiki.yaml
.github/workflows/: update-wiki.yaml
codebake/: Cargo.toml
codebake/src/: lib.rs  main.rs
codebake/src/lisp/: eval.rs  functions.rs  functions_nonnative.rs  mod.rs  parser.rs
codebake/src/ops/: data_format.rs  mod.rs  textual.rs  utility.rs
src/: lib.rs  main.rs  ops.rs
src/lisp/: eval.rs  functions.rs  mod.rs  parser.rs
web-interpreter/: Cargo.toml  index.html
web-interpreter/scss/: styles.scss
web-interpreter/src/: main.rs
wiki-updater/: Cargo.toml  push
wiki-updater/src/: main.rs
