[package]
name = "codebake"
description = "data processing framework and lisp"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "../README.md"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
radix_fmt = "1"
regex = "1.5"
lazy_static = "1.4.0"
urlencoding = "2.1.2"
chumsky = "0.9.2"
